--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -23,7 +23,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="80sp"
+                android:layout_marginBottom="20sp"
                 android:gravity="top"
                 android:text="Login"
                 android:textColor="#000"
@@ -51,12 +51,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Password"
-                android:inputType="textPassword"/>
+                android:inputType="textPassword" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="?android:actionBarSize"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="20dp"
                 android:background="@color/colorPrimary"
 
                 android:onClick="btn_login"
@@ -67,11 +67,22 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:onClick="btn_forgot_pass"
                 android:text="Forgot your password?"
                 android:textSize="18sp" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="?android:actionBarSize"
+                android:layout_marginTop="10dp"
+                android:background="@color/colorPrimary"
+
+                android:onClick="btn_GetUserInfo"
+                android:text="Get User Info "
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
