--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -86,13 +86,14 @@
                     android:layout_height="wrap_content"
                     android:text="Already have an account? "
                     android:textSize="18sp"/>
+
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:onClick="to_signin_page"
                     android:text="Sign in"
                     android:textColor="#2979FF"
-                    android:textSize="18sp"
-                    android:onClick="to_signin_page"/>
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
